k8s/overlays/prod/patches/consumer-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer
spec:
  template:
    spec:
      containers:
      - name: consumer
