k8s/overlays/prod/patches/consumer-ports.yaml
apiVersion: v1
kind: Service
metadata:
  name: consumer
spec:
  $patch: replace
  type: LoadBalancer
  ports:
    - name: http
      port: 8081
      targetPort: 3000
