k8s/overlays/prod/patches/service-ports.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  $patch: replace
  ports:
    - name: amqp
      port: 5673
      targetPort: 5672
