k8s/overlays/prod/patches/consumer-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: consumer-network-policy
spec:
  $patch: replace
  podSelector:
    matchLabels:
      app: consumer
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
      - protocol: TCP
        port: 3000
    - from:
      - podSelector:
          matchLabels:
            app: rabbitmq
      ports:
        - protocol: TCP
          port: 5673
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: rabbitmq
      ports:
        - protocol: TCP
          port: 5672
        - protocol: TCP
          port: 5673
    - to:
      - namespaceSelector: {}
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
