k8s/overlays/prod/patches/producer-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: producer-network-policy
spec:
  $patch: replace
  podSelector:
    matchLabels:
      app: producer
  policyTypes:
    - Egress
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: rabbitmq
      ports:
        - protocol: TCP
          port: 5672
        - protocol: TCP
          port: 5673
    - to:
      - namespaceSelector: {}
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
