k8s/overlays/prod/patches/rabbitmq-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rabbitmq-network-policy
spec:
  $patch: replace
  podSelector:
    matchLabels:
      app: rabbitmq
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: producer
      - podSelector:
          matchLabels:
            app: consumer
      ports:
        - protocol: TCP
          port: 5672
        - protocol: TCP
          port: 5673
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: consumer
      - podSelector:
          matchLabels:
            app: producer
      ports:
        - protocol: TCP
          port: 5672
        - protocol: TCP
          port: 5673
